--- a/escape.html
+++ b/escape.html
@@ -18,15 +18,16 @@
 					<center>What Is This? <br></center></font>
 					<input  id="your guess"><br>
 						
-				<img src="image/arrow2.PNG" class="center-content" id="my_arrow" onclick="changeDresser(this)" height="200px"/>
+				<img src="image/arrrow.png" class="center-content" id="my_arrow" onclick="changeDresser(this)" height="200px"/>
 			</div>
 			<div class="thirdbox2 blue center-content">
-			</div>
+			
 			<div>
 				<font color="white" font size="4px"><center>Find The Key </center></font>
 				<br>
 					<img src="image/closed_door.PNG" height="300px" id="click" />
 					
+			</div>
 			</div>
 			<div class="thirdbox3 orange center-content" id="picture">
 			<font color="white" font size="4px"><center>Check With Pooh <br>
