--- a/escape.html
+++ b/escape.html
@@ -25,7 +25,9 @@
 			<div>
 				<font color="white" font size="4px"><center>Find The Key </center></font>
 				<br>
-					<img src="image/closed_door.PNG" height="300px" id="click" />
+					<img src="image/closed_door.PNG" class="" height="300px" id="click" />
+					<img src="image/open_door.PNG" class="invisible" height="300px" id="next" onclick="nextRoom"/> 
+				
 					
 			</div>
 			</div>
